# overseer

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/overseer-core/: Cargo.toml
crates/overseer-core/src/: connection.rs  credimport.rs  error.rs  lib.rs  recording.rs  tailscale.rs  wol.rs
docs/: ARCHITECTURE.md  ROADMAP.md
src/: App.tsx  index.css  novnc.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discovery.rs  error.rs  launcher.rs  lib.rs  main.rs  rdp.rs  session.rs  sftp.rs  ssh_auth.rs  trust.rs  wol.rs
src/components/: About.tsx  BiometricLock.tsx  CommandPalette.tsx  ConnectDialog.tsx  DeviceCard.tsx  DeviceList.tsx  FileBrowser.tsx  Modal.tsx  OsIcon.tsx  RdpViewer.tsx  SessionHost.tsx  SessionOverview.tsx  SessionTabs.tsx  Settings.tsx  SshTerminal.tsx  Toasts.tsx  TotpPanel.tsx  VaultGate.tsx  VncViewer.tsx
src/lib/: api.ts  biometric.ts  devices.ts  i18n.ts  recorder.ts  screenRegistry.ts  store.ts  terminalBus.ts  totp.ts  types.ts  vault.ts  vncBus.ts  web.ts
