[package]
name = "overseer-core"
description = "Pure, platform-agnostic core logic for Overseer: Tailscale device discovery parsing and RDP/VNC connection building."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
